--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DATABASE_URL="postgresql://postgres:kPNZZvg6byHUu1wQ@db.ebjoliwvlpiasmzrdidw.sup
 
 DIRECT_URL="postgresql://postgres.ebjoliwvlpiasmzrdidw:kPNZZvg6byHUu1wQ@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 
+# postgresql://postgres.ebjoliwvlpiasmzrdidw:kPNZZvg6byHUu1wQ@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 
-
-
+# kPNZZvg6byHUu1wQ
 
