--- a/.env
+++ b/.env
@@ -11,19 +11,13 @@
 
 # DATABASE_URL="mysql://root:1234@localhost:3306/roitai_ecom"
 # VITE_STRIPE_SK =""
-STRIPE_SECRET_KEY=sk_test_1234567890abcdefghijk
-VITE_STRIPE_SK =""
-SECRET = ploynay
-CLOUDINARY_CLOUD_NAME=dax0olv6w
-CLOUDINARY_API_KEY=185525597344647
-CLOUDINARY_API_SECRET=YO_51QdtY9lLeO7uC9vQhlLBf6M
+SECRET = rukthor
+CLOUDINARY_CLOUD_NAME=doeyc1jdp
+CLOUDINARY_API_KEY=766559652861888
+CLOUDINARY_API_SECRET=lneQteiBOtYwioRslvGQVtZqdAU
 
-
-DATABASE_URL="postgresql://postgres:kPNZZvg6byHUu1wQ@db.ebjoliwvlpiasmzrdidw.supabase.co:5432/postgres"
-
-
-
-DIRECT_URL="postgresql://postgres.ebjoliwvlpiasmzrdidw:kPNZZvg6byHUu1wQ@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres:PCnVHfdGolBRY3XB@db.plnalkuhbimosvpxtogr.supabase.co:5432/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://postgres.plnalkuhbimosvpxtogr:PCnVHfdGolBRY3XB@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 
 # postgresql://postgres.ebjoliwvlpiasmzrdidw:kPNZZvg6byHUu1wQ@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 
